--- a/views/login.ejs
+++ b/views/login.ejs
@@ -59,7 +59,7 @@
             </div>
         
 
-            <label for="pw"> Password </label>
+            <label for="password"> Password </label>
             
             <input type = "password" placeholder="Enter Password Here" name = "password" required>
             <br>
