--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -86,10 +86,10 @@
         <form action="/signuppage" method="POST">
             
             <label for="fname">First Name:</label>
-            <input type="text" id="fname" name="fname" size="30" required>
+            <input type="text" id="fname" name="first_name" size="30" required>
             <br><br>
             <label for="lname">Last Name:</label>
-            <input type="text" id="lname" name="lname" size="30" required>
+            <input type="text" id="lname" name="last_name" size="30" required>
             <br><br>
             <label for="dob">Date of Birth:</label>
             <input type="date" id="dob" name="dob" size="30" required>
