server now works with my device

--- a/views/Prescriptions.ejs
+++ b/views/Prescriptions.ejs
@@ -9,9 +9,26 @@
 
 </head>
 <body>
-    <h1 id="heading">Prescriptions</h1>
-    <div class="card-container">
-</div>
+    <header>
+        <img src = "/STATIC/whiteLogoSmall.png" alt = "whiteLogo">
+        <br>
+        <img src = "/STATIC/motto-White.png" alt = "motto">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="/home" >Home</a></li>
+            <li><a href="/Appointment">Appointments</a></li>
+            <li><a href="/medicalHistory" class = "nav_link" data-link>Medical Records</a></li>
+            <li><a href="/billing">Billing Process</a></li>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1 id="heading">Prescriptions</h1>
+        <div class="card-container">
+        </div>
+    </main>
+
 <footer>
     <p>&copy; 2023 Patient Portal</p>
 </footer>
