--- a/public/CSS/prescriptions.css
+++ b/public/CSS/prescriptions.css
@@ -5,39 +5,103 @@ p {
 }
 
 body {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    min-height: 100vh;
     margin: 0px;
     background-color: #f4f4f4;
+}
+
+/* Header style */
+header {
+    background-color: #322636;
+    color: #fff;
+    text-align: center;
+    font-style: italic;
+    padding: 20px 0;
+    font-size: 28px;
+    background-image: url(../STATIC/Medical\ care-amico.png);
+    background-size: 90vw;
+    background-position-y: 20%;
+    text-shadow: 2px 2px 4px #000000;
+    background-blend-mode: soft-light;
+
+}
+
+/* Navigation menu style */
+nav {
+    background-color: rgb(230, 232, 233);
+    text-align: left;
+    padding: 1px;
+    box-shadow: 2px 2px 12px #a7a3a3;
+    opacity: 90%;
+
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+nav li {
+
+    float: left;
+
+}
+
+nav a {
+    text-decoration: none;
+    color: #463f3f;
+    font-size: 18px;
+    display: block;
+    font-family: sans-serif;
+    font-weight: bold;
+    padding: 15px;
+    transition: background-color 0.3s;
+
+
+}
+
+nav a:hover {
+    background-color: aliceblue;
+
+
+}
+
+.nav_link {
+    background-color: aliceblue;
+    color: #000000;
 }
 
 #heading {
     color: #b054c1;
     font-size: 36px;
+    text-align: center;
+    padding: 10px;
 }
 
-.card-container {
+main {
     flex: 1;
     width: 90%;
     margin: 20px 0px 20px 0px;
     align-self: center;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(104, 50, 50, 0.2);
+    margin: 20px auto;
+}
+
+.card-container {
     display: flex;
     align-items: start;
     flex-wrap: wrap;
     padding: 20px;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(20, 19, 19, 0.2);
 }
 
 .container {
     margin: 15px;
     display: flex;
     flex-direction: column;
-    border-radius: 3vw;
+    border-radius: 6px;
 }
 
 .card {
