--- a/views/Prescriptions.ejs
+++ b/views/Prescriptions.ejs
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li><a href="/home" >Home</a></li>
-            <li><a href="/Appointment">Appointments</a></li>
+            <li><a href="/appointment">Appointments</a></li>
             <li><a href="/medicalHistory" class = "nav_link" data-link>Medical Records</a></li>
             <li><a href="/billing">Billing Process</a></li>
             <li><a href="/profile">Profile</a></li>
