--- a/views/medicalHistory.ejs
+++ b/views/medicalHistory.ejs
@@ -20,7 +20,7 @@
     <nav>
         <ul>
             <li><a href="/home" >Home</a></li>
-            <li><a href="/Appointment">Appointments</a></li>
+            <li><a href="/appointments">Appointments</a></li>
             <li><a href="/medicalHistory" class = "nav_link" data-link>Medical Records</a></li>
             <li><a href="/billing">Billing Process</a></li>
             <li><a href="/profile">Profile</a></li>
@@ -53,7 +53,7 @@
 
             </div>
 
-            <div class = "box02" id = "prescription" onclick="location.href='/Prescriptions'" style = "cursor: pointer;">
+            <div class = "box02" id = "prescription" onclick="location.href='/prescriptions'" style = "cursor: pointer;">
                 <h2> Prescription </h2>
                 <p> Click Here To View</p>
                 <br>
