--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -158,18 +158,11 @@
             
         <form action="/signuppage" method="POST">
             
-            <label for="fname">First Name:</label>
-<<<<<<< HEAD
-            <input type="text" id="fname" name="first_name" size="30" required>
+            <label for="first_name">First Name:</label>
+            <input type="text" id="fname" name="first_name" size="30" required placeholder = "Enter First Name Here" >
             <br><br>
-            <label for="lname">Last Name:</label>
-            <input type="text" id="lname" name="last_name" size="30" required>
-=======
-            <input type="text" id="fname" name="fname" size="30" required placeholder = "Enter First Name Here" >
-            <br><br>
-            <label for="lname">Last Name:</label>
-            <input type="text" id="lname" name="lname" size="30" required placeholder = "Enter Last Name Here">
->>>>>>> ca4f468c92aada68ab7bc38270ef76ce78b2a024
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="lname" name="last_name" size="30" required placeholder = "Enter Last Name Here">
             <br><br>
             <label for="dob">Date of Birth:</label>
             <input type="date" id="dob" name="dob" size="30" required>
@@ -181,7 +174,7 @@
             <input type="email" id="email" name="email" size="35" required placeholder="Enter Email Here">
             <br><br>
             <label for="phone">Phone Number:</label>
-            <input type="text" id="phone" name="phone" placeholder="xxx-xxx-xxxx" size="25" required>
+            <input type="text" id="phone" name="phone" placeholder="xxxxxxxxxx" size="25" required>
             <br><br>
             <label for="gender">Gender:</label>
             <select id="gender" name="gender" required>
