--- a/views/medicalHistory.ejs
+++ b/views/medicalHistory.ejs
@@ -15,7 +15,6 @@
     <header>
         <img src = "/STATIC/whiteLogoSmall.png" alt = "whiteLogo">
         <br>
-        <img src = "/STATIC/motto-White.png" alt = "motto">
     </header>
     <nav>
         <ul>
@@ -30,7 +29,7 @@
     <main>
     
         <div class="dashboard-content">
-            <h2>Hey User!</h2>
+            <h2>Hey <%= user.first_name %>!</h2>
             
             <div class = "recentRecords">
                 <p> You Are Currently Viewing Your Medical Records</p>
